logging_monitoring/grafana/grafana-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-ingress
  namespace: monitoring

spec:
  entryPoints:
    - web
  routes:
    - match: PathPrefix(`/grafana`)
      kind: Rule
      services:
        - name: grafana-service
          port: 3000
          namespace: monitoring
      middlewares:
        - name: grafana-stripprefix
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: grafana-stripprefix
  namespace: monitoring
spec:
  stripPrefix:
    prefixes:
      - /grafana
